--- a/src/index.css
+++ b/src/index.css
@@ -1,2 +1,73 @@
 @import "tailwindcss";
-@plugin "daisyui";
+@plugin "daisyui"{
+  themes: light --default;
+ }
+
+
+ @plugin "daisyui/theme" {
+  name: "light";
+  default: true;
+  --color-primary: #FFC448;
+  --color-secondary: #8200DB;
+  --color-accent: #0000fe;
+}
+
+@plugin "daisyui/theme" {
+  name: "dark";
+  default: false;
+  color-scheme: "dark";
+  --color-primary: #0298BD;
+  --color-secondary: oklch(65% 0.241 354.308);
+  --color-accent: oklch(77% 0.152 181.912);
+}
+
+/* When theme is dark */
+[data-theme="dark"] a.active {
+  background-color: var(--color-primary); /* Dark theme's primary color */
+  color: #ffffff;
+}
+
+/* When theme is light */
+[data-theme="light"] a.active {
+  background-color: var(--color-primary); /* Light theme's primary color */
+  color: #ffffff;
+}
+
+/* a.active{
+  padding: 4px 20px;
+  background-color: #058538;
+  color: #ffffff;
+} */
+
+
+
+.plus {
+  position: absolute;
+  color: #058538;
+  font-size: 24px;
+  font-weight: bold;
+  user-select: none;
+  pointer-events: none;
+  animation: fall 1s ease-out forwards;
+}
+
+@keyframes fall {
+  0% {
+    opacity: 1;
+    transform: translateY(0) scale(1);
+  }
+  100% {
+    opacity: 0;
+    transform: translateY(100px) scale(0.5);
+  }
+}
+
+
+
+
+/* ---------cutom------------- */
+
+#home {
+    margin-bottom: 6rem;
+    background: url(../bg-header.png) left top no-repeat;
+}
