--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,11 @@
 @import "tailwindcss";
-@plugin "daisyui"{
+
+@plugin "daisyui" {
   themes: light --default;
- }
+}
 
 
- @plugin "daisyui/theme" {
+@plugin "daisyui/theme" {
   name: "light";
   default: true;
   --color-primary: #FFC448;
@@ -23,13 +24,15 @@
 
 /* When theme is dark */
 [data-theme="dark"] a.active {
-  background-color: var(--color-primary); /* Dark theme's primary color */
+  background-color: var(--color-primary);
+  /* Dark theme's primary color */
   color: #ffffff;
 }
 
 /* When theme is light */
 [data-theme="light"] a.active {
-  background-color: var(--color-primary); /* Light theme's primary color */
+  background-color: var(--color-primary);
+  /* Light theme's primary color */
   color: #ffffff;
 }
 
@@ -56,6 +59,7 @@
     opacity: 1;
     transform: translateY(0) scale(1);
   }
+
   100% {
     opacity: 0;
     transform: translateY(100px) scale(0.5);
@@ -67,7 +71,83 @@
 
 /* ---------cutom------------- */
 
-#home {
-    margin-bottom: 6rem;
-    background: url(../bg-header.png) left top no-repeat;
+html {
+  scroll-behavior: smooth;
 }
+
+
+
+#home {
+  margin-bottom: 6rem;
+  background: url(../bg-header.png) left top no-repeat;
+}
+
+.nav-wave::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: -150%;
+  width: 200%;
+  height: 100%;
+  background: linear-gradient(120deg,
+      transparent 0%,
+      rgba(166, 166, 58, 0.158) 50%,
+      transparent 100%);
+  animation: waveMove 4s linear infinite;
+  z-index: 0;
+  pointer-events: none;
+}
+
+@keyframes waveMove {
+  0% {
+    left: -150%;
+  }
+
+  100% {
+    left: 100%;
+  }
+}
+
+
+.nav-pulse-wave::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: -150%;
+  width: 250%;
+  height: 100%;
+  background: linear-gradient(120deg,
+      transparent 40%,
+      rgba(255, 0, 102, 0.089) 50%,
+      transparent 60%);
+  animation: pulseMove 4s linear infinite, pulseScale 2s ease-in-out infinite;
+  z-index: 0;
+  pointer-events: none;
+}
+
+@keyframes pulseMove {
+  0% {
+    left: -150%;
+  }
+
+  100% {
+    left: 100%;
+  }
+}
+
+@keyframes pulseScale {
+
+  0%,
+  100% {
+    transform: scaleY(1);
+    opacity: 0.7;
+  }
+
+  50% {
+    transform: scaleY(1.3);
+    opacity: 1;
+  }
+}
+
+
+
